--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 DATABASE_URL='postgresql://neondb_owner:npg_cBD7N3wLFiPM@ep-shy-thunder-acq9safz-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
-
+JWT_SECRET=AmargoYdulce_2025_backend_jwt_secreto_x9A!
