--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-oauth/google": "^0.13.4",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.5",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.564.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
