--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express": "^5.2.1",
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
-    "mercadopago": "^2.11.0"
+    "mercadopago": "^2.11.0",
+    "nodemailer": "^8.0.1"
   }
 }
